# vigil

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/builtin/checks/: matches_baseline.py  summary.py
src/builtin/variations/: add_boilerplate.py  add_typos.py  inject_headline.py  insert_junk_characters.py  perturb_linebreaks.py  perturb_whitespace.py  set_environment.py  set_function.py  set_input.py  update_input_keys.py
src/core/: __init__.py  __main__.py  __types__.py  backend.py  check.py  cli.py  engine.py  report.py  spec.py  variation.py
studies/llm/: README.md  dats_llm_backend.py  environment.md  environment.yml  inputs.md  inputs.yml  language.md  language.yml  prompts.md  prompts.yml
studies/llm/checks/: annotated_sentence_overlaps.py  annotation_counts_equal.py  coverage_is_stable.py  labels_agree.py
studies/llm/lib/: dats_client.py  pdf.py
studies/spacy/: README.md  inputs.md  inputs.yml  models.md  models.yml  requirements.txt  spacy_backend.py  stability.md  stability.yml
studies/spacy/checks/: entity_types_agree.py
studies/whisper/: README.md  noise.md  noise.yml  parts.md  parts.yml  requirements.txt  ssh_whisper_backend.py
studies/whisper/checks/: ref_wer_is_under.py  repetitions_under.py  wer_is_under.py
studies/whisper/data/: _metadata.json
studies/whisper/lib/: norm_str.py  tunnel_ssh.py
studies/whisper/variations/: divide_audio.py  (+1 more)
test/: test_engine_cleanup.py  test_engine_report.py  test_spec_env.py  test_spec_load.py
test/fixtures/: noop_backend.py  spec.yml
