[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigil-bv"
version = "0.1.1"
description = "Behavioural verification of evolving systems under controlled variation."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Leopold Lemmermann" }
]
dependencies = [
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
]

[project.scripts]
vigil = "core.cli:start"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "builtin*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[project.urls]
Homepage = "https://leolem.dev/portfolio/vigil"
Repository = "https://github.com/leo-lem/vigil"
Issues = "https://github.com/leo-lem/vigil/issues"
Changelog = "https://github.com/leo-lem/vigil/releases"